--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
   <button class="button">🏘️ Groups</button>
   <button class="button">ℹ️ Info</button>
 
+  <!-- Add padding below the last button -->
+  <div style="height: 100px;"></div>
+
+
   <!-- Floating Footer Menu -->
   <div class="footer">
     <div class="footer-button">🏡</div>
