--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       margin: 20px 0;
       border-radius: 50%;
       background: conic-gradient(#00FFFF, #FFFF00, #00FFFF);
+      transition: transform 3s ease-out;
     }
     .footer {
       position: fixed;
@@ -123,13 +124,13 @@
   </div>
 
   <!-- Spin Wheel -->
-  <div class="wheel"></div>
+  <div class="wheel" id="spinWheel"></div>
 
   <!-- Main Buttons -->
-  <button class="button">🎰 Spin for Tc</button>
-  <button class="button">❤️ Profile</button>
-  <button class="button">📜 Feed</button>
-  <button class="button">🏘️ Groups</button>
+  <button class="button" onclick="spinForTc()">🎰 Spin for Tc</button>
+  <button class="button" onclick="profileAction()">❤️ Profile</button>
+  <button class="button" onclick="feedAction()">📜 Feed</button>
+  <button class="button" onclick="groupsAction()">🏘️ Groups</button>
   <button class="button" onclick="showInfoModal()">ℹ️ Info</button>
 
   <!-- Padding to allow scroll -->
@@ -154,40 +155,38 @@
         This platform integrates PWA support for installation directly on your device, along with sharing options to spread the app. 
         Coming soon: advanced search, direct link sharing, and dynamic content updates.
       </p>
+      <div style="text-align: center; max-width: 800px; margin: 0 auto; padding: 20px;">
+        <p style="font-size: 1.2rem;">
+          Explore the growing network of Troanary and Mirror Thesis projects. Each platform contributes to a unified vision of advanced computing, decentralized systems, and improving global quality of life. Click below to visit each site and dive deeper into the future of information, technology, and human potential.
+        </p>
+
+        <h2 style="color: orange;">Troanary Computing Mirror Thesis</h2>
+        <p><a href="https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis" style="color: orange;">https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis</a></p>
+
+        <h2 style="color: orange;">Troanary WordPress Blog</h2>
+        <p><a href="https://troanary.wordpress.com/" style="color: orange;">https://troanary.wordpress.com/</a></p>
+
+        <h2 style="color: orange;">Tc Coin Blockchain</h2>
+        <p><a href="https://webswiftseo.github.io/tc-coin/" style="color: orange;">https://webswiftseo.github.io/tc-coin/</a></p>
+
+        <h2 style="color: orange;">TroLab</h2>
+        <p><a href="https://webswiftseo.github.io/TroLab/" style="color: orange;">https://webswiftseo.github.io/TroLab/</a></p>
+
+        <h2 style="color: orange;">Tc Sharing App</h2>
+        <p><a href="https://webswiftseo.github.io/TC-Sharing-App/" style="color: orange;">https://webswiftseo.github.io/TC-Sharing-App/</a></p>
+
+        <h2 style="color: orange;">Gov Law Health Portal</h2>
+        <p><a href="https://webswiftseo.github.io/GovLawHealth-Portal" style="color: orange;">https://webswiftseo.github.io/GovLawHealth-Portal</a></p>
+
+        <h2 style="color: orange;">Global Quality of Life-O-Meter</h2>
+        <p><a href="https://webswiftseo.github.io/Global-Quality-of-Life-Ometer" style="color: orange;">https://webswiftseo.github.io/Global-Quality-of-Life-Ometer</a></p>
+      </div>
     </div>
-    <div style="text-align: center; max-width: 800px; margin: 0 auto; padding: 20px;">
-  <p style="font-size: 1.2rem;">
-    Explore the growing network of Troanary and Mirror Thesis projects. Each platform contributes to a unified vision of advanced computing, decentralized systems, and improving global quality of life. Click below to visit each site and dive deeper into the future of information, technology, and human potential.
-  </p>
-
-  <h2 style="color: orange;">Troanary Computing Mirror Thesis</h2>
-  <p><a href="https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis" style="color: orange;">https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis</a></p>
-
-  <h2 style="color: orange;">Troanary WordPress Blog</h2>
-  <p><a href="https://troanary.wordpress.com/" style="color: orange;">https://troanary.wordpress.com/</a></p>
-
-  <h2 style="color: orange;">Tc Coin Blockchain</h2>
-  <p><a href="https://webswiftseo.github.io/tc-coin/" style="color: orange;">https://webswiftseo.github.io/tc-coin/</a></p>
-
-  <h2 style="color: orange;">TroLab</h2>
-  <p><a href="https://webswiftseo.github.io/TroLab/" style="color: orange;">https://webswiftseo.github.io/TroLab/</a></p>
-
-  <h2 style="color: orange;">Tc Sharing App</h2>
-  <p><a href="https://webswiftseo.github.io/TC-Sharing-App/" style="color: orange;">https://webswiftseo.github.io/TC-Sharing-App/</a></p>
-
-  <h2 style="color: orange;">Gov Law Health Portal</h2>
-  <p><a href="https://webswiftseo.github.io/GovLawHealth-Portal" style="color: orange;">https://webswiftseo.github.io/GovLawHealth-Portal</a></p>
-
-  <h2 style="color: orange;">Global Quality of Life-O-Meter</h2>
-  <p><a href="https://webswiftseo.github.io/Global-Quality-of-Life-Ometer" style="color: orange;">https://webswiftseo.github.io/Global-Quality-of-Life-Ometer</a></p>
-</div>
-
   </div>
 
   <script>
     let deferredPrompt;
 
-    // Install PWA
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
@@ -207,7 +206,6 @@
       }
     }
 
-    // Share App
     function shareApp() {
       if (navigator.share) {
         navigator.share({
@@ -222,7 +220,6 @@
       }
     }
 
-    // Info Modal Functions
     function showInfoModal() {
       document.getElementById('infoModal').style.display = 'block';
     }
@@ -231,13 +228,34 @@
       document.getElementById('infoModal').style.display = 'none';
     }
 
-    // Close modal if clicking outside content
     window.onclick = function(event) {
       const modal = document.getElementById('infoModal');
       if (event.target === modal) {
         modal.style.display = 'none';
       }
     };
+
+    function spinForTc() {
+      const reward = Math.floor(Math.random() * 100) + 1;
+      alert(`🎉 You earned ${reward} Tc!`);
+
+      const wheel = document.getElementById('spinWheel');
+      const spinDegrees = Math.floor(Math.random() * 360) + 720;
+      wheel.style.transform = `rotate(${spinDegrees}deg)`;
+    }
+
+    function profileAction() {
+      alert('Profile feature coming soon!');
+    }
+
+    function feedAction() {
+      alert('Feed feature coming soon!');
+    }
+
+    function groupsAction() {
+      alert('Groups feature coming soon!');
+    }
+
   </script>
 
 </body>
