--- a/index.html
+++ b/index.html
@@ -6,137 +6,38 @@
   <title>Tc Coin App</title>
   <link rel="manifest" href="manifest.json" />
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-    }
-    .button {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #FFD700;
-      color: #000;
-      border-radius: 20px;
-      padding: 15px 30px;
-      margin: 10px 0;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-align: center;
-      text-decoration: none;
-      box-shadow: 0 4px 8px rgba(255, 215, 0, 0.5);
-      transition: transform 0.2s, box-shadow 0.2s;
-      width: 250px;
-    }
-    .button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(255, 215, 0, 0.7);
-    }
-    .top-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .wheel {
-      width: 300px;
-      height: 300px;
-      margin: 20px 0;
-      border-radius: 50%;
-      background: conic-gradient(#00FFFF, #FFFF00, #00FFFF);
-      transition: transform 3s ease-out;
-    }
-    .footer {
-      position: fixed;
-      bottom: 10px;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-evenly;
-      background-color: #111;
-      padding: 10px 0;
-      border-top: 2px solid #0ff;
-    }
-    .footer-button {
-      background-color: #FFD700;
-      color: #000;
-      border-radius: 15px;
-      padding: 10px 20px;
-      font-size: 1rem;
-      font-weight: bold;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(255, 215, 0, 0.5);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .footer-button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(255, 215, 0, 0.7);
-    }
-    .coming-soon {
-      opacity: 0.5;
-    }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.8);
-    }
-    .modal-content {
-      background-color: #111;
-      color: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border: 2px solid #FFD700;
-      border-radius: 20px;
-      width: 80%;
-      max-width: 400px;
-      text-align: center;
-    }
-    .close {
-      color: #FFD700;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .close:hover {
-      color: #ff0;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; background-color: #000; color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; }
+    .button { display: inline-flex; align-items: center; justify-content: center; background-color: #FFD700; color: #000; border-radius: 20px; padding: 15px 30px; margin: 10px 0; font-size: 1.2rem; font-weight: bold; text-align: center; text-decoration: none; box-shadow: 0 4px 8px rgba(255, 215, 0, 0.5); transition: transform 0.2s, box-shadow 0.2s; width: 250px; }
+    .button:hover { transform: scale(1.05); box-shadow: 0 6px 12px rgba(255, 215, 0, 0.7); }
+    .top-buttons { display: flex; justify-content: center; gap: 10px; margin-top: 20px; }
+    .wheel { width: 300px; height: 300px; margin: 20px 0; border-radius: 50%; background: conic-gradient(#00FFFF, #FFFF00, #00FFFF); transition: transform 3s ease-out; }
+    .footer { position: fixed; bottom: 10px; left: 0; width: 100%; display: flex; justify-content: space-evenly; background-color: #111; padding: 10px 0; border-top: 2px solid #0ff; }
+    .footer-button { background-color: #FFD700; color: #000; border-radius: 15px; padding: 10px 20px; font-size: 1rem; font-weight: bold; text-align: center; box-shadow: 0 4px 8px rgba(255, 215, 0, 0.5); transition: transform 0.2s, box-shadow 0.2s; }
+    .footer-button:hover { transform: scale(1.05); box-shadow: 0 6px 12px rgba(255, 215, 0, 0.7); }
+    .coming-soon { opacity: 0.5; }
+    .modal { display: none; position: fixed; z-index: 10; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0, 0, 0, 0.8); }
+    .modal-content { background-color: #111; color: #fff; margin: 15% auto; padding: 20px; border: 2px solid #FFD700; border-radius: 20px; width: 80%; max-width: 400px; text-align: center; }
+    .close { color: #FFD700; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
+    .close:hover { color: #ff0; }
   </style>
 </head>
 <body>
 
-  <!-- Install & Share Buttons -->
   <div class="top-buttons">
     <button class="button" onclick="installPWA()">📲 Install</button>
     <button class="button" onclick="shareApp()">🚀 Share</button>
   </div>
 
-  <!-- Spin Wheel -->
   <div class="wheel" id="spinWheel"></div>
 
-  <!-- Main Buttons -->
   <button class="button" onclick="spinForTc()">🎰 Spin for Tc</button>
   <button class="button" onclick="profileAction()">❤️ Profile</button>
   <button class="button" onclick="feedAction()">📜 Feed</button>
   <button class="button" onclick="groupsAction()">🏘️ Groups</button>
   <button class="button" onclick="showInfoModal()">ℹ️ Info</button>
 
-  <!-- Padding to allow scroll -->
   <div style="height: 100px;"></div>
 
-  <!-- Floating Footer Menu -->
   <div class="footer">
     <div class="footer-button">🏡</div>
     <div class="footer-button">❤️</div>
@@ -145,39 +46,25 @@
     <div class="footer-button coming-soon">🔎</div>
   </div>
 
-  <!-- Info Modal -->
   <div id="infoModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeInfoModal()">&times;</span>
       <h2>Welcome to the Tc Coin App</h2>
-      <p>
-        The Tc Coin App is a decentralized prototype designed for users to spin and earn Tc tokens, engage with groups, and participate in a knowledge-driven network. 
-        This platform integrates PWA support for installation directly on your device, along with sharing options to spread the app. 
-        Coming soon: advanced search, direct link sharing, and dynamic content updates.
-      </p>
+      <p>The Tc Coin App is a decentralized prototype designed for users to spin and earn Tc tokens, engage with groups, and participate in a knowledge-driven network. This platform integrates PWA support for installation directly on your device, along with sharing options to spread the app. Coming soon: advanced search, direct link sharing, and dynamic content updates.</p>
       <div style="text-align: center; max-width: 800px; margin: 0 auto; padding: 20px;">
-        <p style="font-size: 1.2rem;">
-          Explore the growing network of Troanary and Mirror Thesis projects. Each platform contributes to a unified vision of advanced computing, decentralized systems, and improving global quality of life. Click below to visit each site and dive deeper into the future of information, technology, and human potential.
-        </p>
-
+        <p style="font-size: 1.2rem;">Explore the growing network of Troanary and Mirror Thesis projects. Each platform contributes to a unified vision of advanced computing, decentralized systems, and improving global quality of life. Click below to visit each site and dive deeper into the future of information, technology, and human potential.</p>
         <h2 style="color: orange;">Troanary Computing Mirror Thesis</h2>
         <p><a href="https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis" style="color: orange;">https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis</a></p>
-
         <h2 style="color: orange;">Troanary WordPress Blog</h2>
         <p><a href="https://troanary.wordpress.com/" style="color: orange;">https://troanary.wordpress.com/</a></p>
-
         <h2 style="color: orange;">Tc Coin Blockchain</h2>
         <p><a href="https://webswiftseo.github.io/tc-coin/" style="color: orange;">https://webswiftseo.github.io/tc-coin/</a></p>
-
         <h2 style="color: orange;">TroLab</h2>
         <p><a href="https://webswiftseo.github.io/TroLab/" style="color: orange;">https://webswiftseo.github.io/TroLab/</a></p>
-
         <h2 style="color: orange;">Tc Sharing App</h2>
         <p><a href="https://webswiftseo.github.io/TC-Sharing-App/" style="color: orange;">https://webswiftseo.github.io/TC-Sharing-App/</a></p>
-
         <h2 style="color: orange;">Gov Law Health Portal</h2>
         <p><a href="https://webswiftseo.github.io/GovLawHealth-Portal" style="color: orange;">https://webswiftseo.github.io/GovLawHealth-Portal</a></p>
-
         <h2 style="color: orange;">Global Quality of Life-O-Meter</h2>
         <p><a href="https://webswiftseo.github.io/Global-Quality-of-Life-Ometer" style="color: orange;">https://webswiftseo.github.io/Global-Quality-of-Life-Ometer</a></p>
       </div>
@@ -212,9 +99,7 @@
           title: 'Tc Coin App',
           text: 'Check out the Tc Coin App!',
           url: window.location.href
-        })
-        .then(() => console.log('Shared successfully'))
-        .catch((error) => console.log('Error sharing:', error));
+        }).then(() => console.log('Shared successfully')).catch((error) => console.log('Error sharing:', error));
       } else {
         alert('Sharing not supported on this device.');
       }
@@ -238,7 +123,6 @@
     function spinForTc() {
       const reward = Math.floor(Math.random() * 100) + 1;
       alert(`🎉 You earned ${reward} Tc!`);
-
       const wheel = document.getElementById('spinWheel');
       const spinDegrees = Math.floor(Math.random() * 360) + 720;
       wheel.style.transform = `rotate(${spinDegrees}deg)`;
@@ -255,7 +139,6 @@
     function groupsAction() {
       alert('Groups feature coming soon!');
     }
-
   </script>
 
 </body>
