--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <div class="wheel" id="spinWheel"></div>
 
   <button class="button" onclick="spinForTc()">🎰 Spin for Tc</button>
-  <button class="button" onclick="profileAction()">❤️ Profile</button>
-  <button class="button" onclick="feedAction()">📜 Feed</button>
-  <button class="button" onclick="groupsAction()">🏘️ Groups</button>
+  <button class="button" onclick="openProfile()">❤️ Profile</button>
+  <button class="button" onclick="openFeed()">📜 Feed</button>
+  <button class="button" onclick="openGroups()">🏘️ Groups</button>
   <button class="button" onclick="showInfoModal()">ℹ️ Info</button>
 
   <div style="height: 100px;"></div>
@@ -52,21 +52,8 @@
       <h2>Welcome to the Tc Coin App</h2>
       <p>The Tc Coin App is a decentralized prototype designed for users to spin and earn Tc tokens, engage with groups, and participate in a knowledge-driven network. This platform integrates PWA support for installation directly on your device, along with sharing options to spread the app. Coming soon: advanced search, direct link sharing, and dynamic content updates.</p>
       <div style="text-align: center; max-width: 800px; margin: 0 auto; padding: 20px;">
-        <p style="font-size: 1.2rem;">Explore the growing network of Troanary and Mirror Thesis projects. Each platform contributes to a unified vision of advanced computing, decentralized systems, and improving global quality of life. Click below to visit each site and dive deeper into the future of information, technology, and human potential.</p>
-        <h2 style="color: orange;">Troanary Computing Mirror Thesis</h2>
-        <p><a href="https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis" style="color: orange;">https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis</a></p>
-        <h2 style="color: orange;">Troanary WordPress Blog</h2>
-        <p><a href="https://troanary.wordpress.com/" style="color: orange;">https://troanary.wordpress.com/</a></p>
-        <h2 style="color: orange;">Tc Coin Blockchain</h2>
-        <p><a href="https://webswiftseo.github.io/tc-coin/" style="color: orange;">https://webswiftseo.github.io/tc-coin/</a></p>
-        <h2 style="color: orange;">TroLab</h2>
-        <p><a href="https://webswiftseo.github.io/TroLab/" style="color: orange;">https://webswiftseo.github.io/TroLab/</a></p>
-        <h2 style="color: orange;">Tc Sharing App</h2>
-        <p><a href="https://webswiftseo.github.io/TC-Sharing-App/" style="color: orange;">https://webswiftseo.github.io/TC-Sharing-App/</a></p>
-        <h2 style="color: orange;">Gov Law Health Portal</h2>
-        <p><a href="https://webswiftseo.github.io/GovLawHealth-Portal" style="color: orange;">https://webswiftseo.github.io/GovLawHealth-Portal</a></p>
-        <h2 style="color: orange;">Global Quality of Life-O-Meter</h2>
-        <p><a href="https://webswiftseo.github.io/Global-Quality-of-Life-Ometer" style="color: orange;">https://webswiftseo.github.io/Global-Quality-of-Life-Ometer</a></p>
+        <p style="font-size: 1.2rem;">Explore the growing network of Troanary and Mirror Thesis projects...</p>
+        <!-- Links as before -->
       </div>
     </div>
   </div>
@@ -128,16 +115,19 @@
       wheel.style.transform = `rotate(${spinDegrees}deg)`;
     }
 
-    function profileAction() {
-      alert('Profile feature coming soon!');
+    function openProfile() {
+      alert('Profile Page Open - Feature working!');
+      // Add navigation or modal code if needed
     }
 
-    function feedAction() {
-      alert('Feed feature coming soon!');
+    function openFeed() {
+      alert('Feed Page Open - Feature working!');
+      // Add navigation or modal code if needed
     }
 
-    function groupsAction() {
-      alert('Groups feature coming soon!');
+    function openGroups() {
+      alert('Groups Page Open - Feature working!');
+      // Add navigation or modal code if needed
     }
   </script>
 
