--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <meta name="keywords" content="Tc Coin, blockchain, decentralized, Troanary, PWA">
     <meta property="og:title" content="Tc Coin Blockchain">
     <meta property="og:description" content="Earn Tc Coins through time, trust, and sharing in a decentralized blockchain app.">
-    <meta property="og:image" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/images/coin-tc-blockchain-512x512.webp">
-    <meta property="og:url" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/">
+    <meta property="og:image" content="https://webswiftseo.github.io/Tc-Coin/images/coin-tc-blockchain-512x512.webp">
+    <meta property="og:url" content="https://webswiftseo.github.io/Tc-Coin/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tc Coin Blockchain">
     <meta name="twitter:description" content="Earn Tc Coins through time, trust, and sharing in a decentralized blockchain app.">
-    <meta name="twitter:image" content="https://webswiftseo.github.io/Tc-Coin-Blockchain/images/coin-tc-blockchain-512x512.webp">
+    <meta name="twitter:image" content="https://webswiftseo.github.io/Tc-Coin/images/coin-tc-blockchain-512x512.webp">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Tc Coin Blockchain",
         "description": "A decentralized blockchain app based on Troanary principles.",
-        "url": "https://webswiftseo.github.io/Tc-Coin-Blockchain/"
+        "url": "https://webswiftseo.github.io/Tc-Coin/"
     }
     </script>
-    <link rel="manifest" href="/Tc-Coin-Blockchain/manifest.json">
+    <link rel="manifest" href="/Tc-Coin/manifest.json">
     <title>Tc Coin Blockchain</title>
     <style>
         body { margin: 0; font-family: Arial, sans-serif; background-color: #000; color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; }
@@ -42,7 +42,7 @@
         textarea.input { resize: vertical; min-height: 100px; }
         .list { list-style: none; padding: 1rem; background: #1a1a1a; border-radius: 16px; margin-top: 1rem; max-height: 200px; overflow-y: auto; }
         .list li { padding: 0.5rem; border-bottom: 1px solid #00ffff; }
-        .qr-code { margin: 1rem auto; width: 200px; height: 200px; background: url('/Tc-Coin-Blockchain/images/qr-bg-tc-blockchain-300x300.webp') center/cover; display: flex; justify-content: center; align-items: center; border-radius: 16px; }
+        .qr-code { margin: 1rem auto; width: 200px; height: 200px; background: url('/Tc-Coin/images/qr-bg-tc-blockchain-300x300.webp') center/cover; display: flex; justify-content: center; align-items: center; border-radius: 16px; }
     </style>
 </head>
 <body>
@@ -377,7 +377,7 @@
         }
 
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/Tc-Coin-Blockchain/service-worker.js');
+            navigator.serviceWorker.register('/Tc-Coin/service-worker.js');
         }
     </script>
 </body>
