--- a/index.html
+++ b/index.html
@@ -120,9 +120,58 @@
     <div id="infoModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeInfoModal()">×</span>
-            <h2>Welcome to Tc Coin Blockchain</h2>
-            <p>The Tc Coin Blockchain is a decentralized prototype designed for users to spin and earn Tc tokens, engage with groups, and participate in a knowledge-driven network. This platform integrates PWA support for installation directly on your device, along with sharing options to spread the app. Coming soon: advanced search, direct link sharing, and dynamic content updates.</p>
-            <p style="font-size: 1.2rem;">Explore the growing network of Troanary and Mirror Thesis projects...</p>
+            <div class="modal-content">
+  <h2>🌐 Welcome to Tc Coin Blockchain</h2>
+  <p>
+    The <strong>Tc Coin Blockchain</strong> is a decentralized hybrid blockchain prototype designed to reward users for their <strong>time</strong>, <strong>trust</strong>, and <strong>sharing</strong>. Built on the principles of the <em>Troanary Mirror Thesis</em>, this platform integrates <strong>PWA</strong> support for easy installation, offline functionality, and seamless sharing to grow the community.
+  </p>
+
+  <h3>⚙️ Key Features</h3>
+  <ul>
+    <li>🎰 <strong>Spin the Wheel</strong> to earn Tc Coins instantly.</li>
+    <li>🏘️ <strong>Groups</strong>: Connect and collaborate in knowledge-driven networks.</li>
+    <li>📜 <strong>Feed</strong>: View transactions and community updates in real time.</li>
+    <li>❤️ <strong>Profile & Wallet</strong>: Manage your Tc balance, trust level, and personal info.</li>
+    <li>📲 <strong>PWA Install</strong>: Install directly to your device for offline use.</li>
+    <li>🚀 <strong>Share & Earn</strong>: Invite others and earn rewards for sharing.</li>
+    <li>🔐 <strong>Decentralized</strong>: Fully independent, no central authority. You control your data.</li>
+  </ul>
+
+  <h3>🌍 Explore the Troanary Ecosystem</h3>
+  <p>These platforms work together to create a better future for decentralized systems, computing, and global quality of life. Dive into the Troanary network:</p>
+
+  <ul>
+    <li>🪞 <strong>Troanary Computing Mirror Thesis</strong> <br>
+      <a href="https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis" target="_blank">https://webswiftseo.github.io/Troanary-Computing-Mirror-Thesis</a>
+    </li>
+    <li>📝 <strong>Troanary WordPress Blog</strong> <br>
+      <a href="https://troanary.wordpress.com/" target="_blank">https://troanary.wordpress.com/</a>
+    </li>
+    <li>💰 <strong>Tc Coin Blockchain App</strong> <br>
+      <a href="https://webswiftseo.github.io/tc-coin/" target="_blank">https://webswiftseo.github.io/tc-coin/</a>
+    </li>
+    <li>🧪 <strong>TroLab Experimental Hub</strong> <br>
+      <a href="https://webswiftseo.github.io/TroLab/" target="_blank">https://webswiftseo.github.io/TroLab/</a>
+    </li>
+    <li>🤝 <strong>Tc Sharing App</strong> <br>
+      <a href="https://webswiftseo.github.io/TC-Sharing-App/" target="_blank">https://webswiftseo.github.io/TC-Sharing-App/</a>
+    </li>
+    <li>⚖️ <strong>Gov Law Health Portal</strong> <br>
+      <a href="https://webswiftseo.github.io/GovLawHealth-Portal" target="_blank">https://webswiftseo.github.io/GovLawHealth-Portal</a>
+    </li>
+    <li>🌐 <strong>Global Quality of Life-O-Meter</strong> <br>
+      <a href="https://webswiftseo.github.io/Global-Quality-of-Life-Ometer" target="_blank">https://webswiftseo.github.io/Global-Quality-of-Life-Ometer</a>
+    </li>
+  </ul>
+
+  <h3>🚀 Get Started Today!</h3>
+  <p>
+    ✅ Spin and earn Tc Coins <br>
+    ✅ Grow your trust level and reputation <br>
+    ✅ Join the decentralized revolution and be part of the future of <strong>Troanary Computing</strong>!
+  </p>
+</div>
+
         </div>
     </div>
 
